--- a/roles/configs/tasks/template-dir.yml
+++ b/roles/configs/tasks/template-dir.yml
@@ -5,12 +5,12 @@
   ansible.builtin.file:
     path: '{{ templates_destination }}/{{ item.path }}'
     state: directory
-  with_community.general.filetree: '{{ templates_source }}'
+  with_filetree: '{{ templates_source }}'
   when: item.state == 'directory'
 
 - name: Ensure files are populated from templates
   ansible.builtin.template:
     src: '{{ item.src }}'
     dest: '{{ templates_destination }}/{{ item.path }}'
-  with_community.general.filetree: '{{ templates_source }}'
+  with_filetree: '{{ templates_source }}'
   when: item.state == 'file'
