add frailew and lamew

--- a/servers/minecraft/plugins/BondrewdLikesHisEmotes/config.yml
+++ b/servers/minecraft/plugins/BondrewdLikesHisEmotes/config.yml
@@ -243,6 +243,8 @@ emotes:
   - "whistles|davidusw mineinabyss:whistles/davidusw.png"
   - "whistles|fauxw mineinabyss:whistles/fauxw.png"
   - "whistles|frailew mineinabyss:whistles/frailew.png"
+  - "whistles|marblew mineinabyss:whistles/marblew.png"
+  - "whistles|lamew mineinabyss:whistles/lamew.png"
 
   - "default|admin mineinabyss:ui/roles/admin.png 7 7"
   - "default|moderator mineinabyss:ui/roles/moderator.png 7 7"
