--- a/servers/mobs/sync/plugins/MythicMobs/Mobs/mineinabyss/stingerhead.yml
+++ b/servers/mobs/sync/plugins/MythicMobs/Mobs/mineinabyss/stingerhead.yml
@@ -1,7 +1,7 @@
 Stingerhead:
   Type: SPIDER
   Display: 'StingerHead'
-  Health: 150
+  Health: 125
   Damage: 9
   AIGoalSelectors:
     - clear
@@ -34,12 +34,12 @@ Stingerhead:
   DamageModifiers:
     - PROJECTILE 0.25
   Skills:
-    # - state{s=burrow_out} @self ~onSpawn
+    - skill{s=burrow_out} @self ~onSpawn
     # - state{s=burrow_in} @self ~onDespawn
     
     - skill{s=Changetarget} ~onTimer:160 <99%
     - skill{s=Cancelattack;sync=true} ~onAttack
-    - skill{s=SH_Attack} ~onTimer:10 0.65
+    - skill{s=SH_Attack} ~onTimer:10 0.75
     - skill{s=SH_Hit} ~onDamaged
     - skill{s=stingerhead_death} @self ~onDeath
     - skill{s=stingerhead_venom} @target ~onTimer:45
