--- a/servers/mobs/sync/plugins/Geary/mineinabyss/mobs/hostile/silkfang.yml
+++ b/servers/mobs/sync/plugins/Geary/mineinabyss/mobs/hostile/silkfang.yml
@@ -1,40 +1,10 @@
 - !<geary:inherit>
   from: [mineinabyss:hostile]
 - !<mobzy:display_name> "<#116AAD>Silkfang"
+- !<geary:set.mythic_mob> Stingerhead
 - !<mobzy:set.modelengine-model>
   modelId: silkfang
 - !<mobzy:set.attributes>
-  maxHealth: 15
-  movementSpeed: 0.3
-  attackDamage: 5
-  attackKnockback: 1
-  knockbackResistance: 0.0500
-  followRange: 40
-  width: 1.3
-  height: 1.3
-#- !<geary:children>
-#  slow:
-#    - !<geary:apply> geary:potion_effects
-#    - !<geary:potion_effects>
-#      - type: SLOW
-#        duration: 10s
-#        amplifier: 10
-#  slowCondition:
-#    - !<geary:condition.chance>
-#      percentage: 0.6
-#  projectile:
-#    - !<geary:event.triggers>
-#      - geary:event.touched -> parent.child(slow)
-#    - !<minecraft:entity_type>
-#      type: SNOWBALL
-#    - !<mobzy:set.projectile_item>
-#      item:
-#        type: SNOWBALL
-#        customModelData: 100
-#- !<geary:event.triggers>
-#  - geary:event.touched -> child(slow)
-#- !<geary:event.conditions>
-#  - any -> child(slowCondition) -> child(slow)
 - !<mobzy:death_loot>
   minExp: 30
   maxExp: 50
